# model-caffe

./: Makefile  README.md  caffe_pb2.py  dump.py  gen-blob-cpp.py  gen-blob-h.py  gen-blob.sh  gen-conf.py  gen-config.py  gen-config.sh  gen-data.py  gen-dump.py  gen-dump.sh  gen-layer.py  gen-mak.py  gen-others.sh  gen-param-cpp.py  gen-param-h.py  gen-param.sh  gen-python.sh  gen-sc.sh  gen-setup-cpp.py  gen-setup.sh  gen-submod.py  gen-submod.sh  gen-weight-h.py  gen-weight.sh  gen-wire.py  gen-wire.sh  hack.py  hack.sh  layer_list.py  layers.txt  net_wrapper.py  print-model.py  print-model.sh
ref/: CMakeLists.txt  data  detect.cpp  models  run.sh  ssd_detect.cpp  ssd_detect.h
src/: concat_layer_ext.cpp  conv_layer_ext.cpp  conv_struct.cpp  conv_struct.h  cv-bridge.cpp  cv-bridge.h  detect.cpp  detection_output_layer_ext.cpp  flatten_layer_ext.cpp  input_layer_ext.cpp  input_layer_ext.h  main.cpp  module.h  normalize_layer_ext.cpp  permute_layer_ext.cpp  pooling_layer_ext.cpp  prior_box_layer_ext.cpp  relu_layer_ext.cpp  reshape_layer_ext.cpp  sc_and.h  sc_gated_and.h  sc_layer.cpp  sc_layer.h  sc_net.cpp  sc_net.h  softmax_layer_ext.cpp  split_layer_ext.cpp  split_layer_ext.h  ssd_detect.cpp  ssd_detect.h  util.cpp  util.h
